Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Picklist_Value__c/Intake_Picklist_Value__c.object-meta.xml
<CustomObject>
    <label>Intake Picklist Value</label>
    <pluralLabel>Intake Picklist Values</pluralLabel>
    <nameField>
        <label>Value Number</label>
        <type>AutoNumber</type>
        <displayFormat>IPV-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Static picklist option for an Intake Question.</description>
</CustomObject>