Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Picklist_Value__c/fields/Intake_Question__c.field-meta.xml
<CustomField>
    <fullName>Intake_Question__c</fullName>
    <label>Intake Question</label>
    <type>MasterDetail</type>
    <referenceTo>Intake_Question__c</referenceTo>
    <relationshipLabel>Picklist Values</relationshipLabel>
    <relationshipName>Picklist_Values</relationshipName>
</CustomField>