Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Picklist_Value__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>