Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Picklist_Value__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>