Demo Packs/Intake Builder Pack/force-app/main/default/objects/Intake_Picklist_Value__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>